--- a/myDiscordReward/src/main/resources/plugin.yml
+++ b/myDiscordReward/src/main/resources/plugin.yml
@@ -16,17 +16,20 @@ commands:
 
 permissions:
   mydiscordreward.mydiscordreward:
-    description: Allow to use /mydiscordreward command
+    description: Allow to use /mydiscordreward
     default: true
-  mydiscordreward.reload:
-    description: Allow to use /mydiscordreward reload command
+  mydiscordreward.getreward:
+    description: Allow to get reward
+    default: true
+  mydiscordreward.admin:
+    description: Allow to use /mydiscordreward <reload/update/addrewarditem/addrewardcommand>
     default: op
-  mydiscordreward.update:
-    description: Allow to use /mydiscordreward update command
-    default: op
-  mydiscordreward.addrewarditem:
-    description: Allow to use /mydiscordreward addrewarditem command
-    default: op
-  mydiscordreward.addrewardcommand:
-    description: Allow to use /mydiscordreward addrewardcommand (command) command
-    default: op
+  #mydiscordreward.update:
+  #  description: Allow to use /mydiscordreward update command
+  #  default: op
+  #mydiscordreward.addrewarditem:
+  #  description: Allow to use /mydiscordreward addrewarditem command
+  #  default: op
+  #mydiscordreward.addrewardcommand:
+  #  description: Allow to use /mydiscordreward addrewardcommand (command) command
+  #  default: op
